# minGPT

./: demo.py  generate.py  pyproject.toml
mingpt/: bpe.py  model.py  trainer.py  utils.py
